fix overflow issue with add button

--- a/client/assets/styles/scss/components/header.scss
+++ b/client/assets/styles/scss/components/header.scss
@@ -269,7 +269,7 @@ header {
   display: inline-block;
   float: left;
   font-weight: 500;
-  max-width: 171px;
+  max-width: 139px;
   overflow: hidden;
   padding: 0 3px 0 0;
   text-overflow: ellipsis;
